--- a/smartphone_price_predictor/templates/index.html
+++ b/smartphone_price_predictor/templates/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="card mt-50" style="width: 100%; height: 100%">
                 <div class="card-header" style="text-align: center">
-                    <h1 class="card-title text-center">Smatphone Price Predictor</h1>
+                    <h1 class="card-title text-center">Mobile Phone Price Predictor</h1>
                 </div>
                 <div class="card-body p-3 mb-2 bg-info text-white" style="width: 100%; text-align: center;">
                     <div>
